--- a/index.html
+++ b/index.html
@@ -429,13 +429,13 @@
 
     <div class="container">
         <div class="title-wrap">
-            <div class="subtitle-small">Residence Secret Gift · 2025</div>
+            <div class="subtitle-small">Wada Gift · 2025</div>
             <h1 class="main-title">
                 Meri Kirihimete, <span class="name-highlight">Ava</span> 🌊🎄
             </h1>
             <p class="tagline">
-                A tiny ocean-themed corner of the internet, just for you – with a bit of Christmas sparkle,
-                a few seashells, and plenty of good wishes for the year ahead.
+                Being a hardcore computer science student, I thought I’d make a tiny ocean-themed website for you with a bit of Christmas sparkle,
+                a few seashells and plenty of good wishes for the year ahead :)
             </p>
         </div>
 
@@ -449,13 +449,12 @@
                         <div class="letter-text">
                             <p>Hi Ava 👋</p>
                             <p>
-                                I got told a few key facts about you: that you’re from New Zealand, that the ocean is
-                                very much your element, and that music is a big part of your world. That honestly
-                                sounded like such a cool combination that it deserved its own little webpage.
+                                I got told and learned a few key facts about you from your MUWCI'27 introduction post: that you’re from New Zealand, that the ocean is
+                                very much your element and that music is a big part of your world. I thought this cool combination deserved its own little webpage :)
                             </p>
                             <p>
-                                Consider this a small digital postcard from a neighbour in the residence – wishing
-                                you peaceful waves, good playlists, and a December that feels a bit softer around the edges.
+                                Consider this a small digital postcard from a neighbour in the wada. Wishing
+                                you peaceful waves, good playlists and a December that feels a bit softer around the edges.
                             </p>
                         </div>
                         <div class="letter-footer">
@@ -468,13 +467,14 @@
                         <div class="letter-header">A quick note before you open the full message</div>
                         <div class="letter-text">
                             <p>
-                                Since we don’t really know each other (yet!), this isn’t anything deep or dramatic –
-                                just a genuine wish that your Christmas feels calm, cozy, and very “you”.
+                                Since we don’t really know each other (yet!), this isn’t anything deep or dramatic.
+                                It's just a genuine wish that your Christmas feels calm, cozy and fun.
                             </p>
                             <p>
                                 I hope the sea feels close, even if it’s only in your head or through a song,
                                 and that 2026 is full of steady water, bright mornings, and the kind of swims
-                                that reset your whole brain in the best way.
+                                that reset your whole brain in the best way. P.S. Thank you so much for being
+                                a MUWCI frog and for helping us in experiencing the joy of swimming.
                             </p>
                         </div>
                         <div class="letter-footer">
@@ -672,3 +672,4 @@
     </script>
 </body>
 </html>
+
