--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                 <div class="letter-inner">
                     <!-- Front -->
                     <div class="letter-face letter-front">
-                        <div class="letter-header">An ocean-sized Christmas hello</div>
+                        <div class="letter-header">A little backstory and a bit of context</div>
                         <div class="letter-text">
                             <p>Hi Ava 👋</p>
                             <p>
@@ -672,4 +672,5 @@
     </script>
 </body>
 </html>
+
 
