--- a/message.html
+++ b/message.html
@@ -253,8 +253,8 @@
                     A small wave of good wishes, <span>Ava</span> 🌊
                 </h1>
                 <p class="subtitle">
-                    From one person in this residence to another – nothing intense, just a quiet wish 
-                    that your December feels a little more peaceful and a little more you.
+                    From one person in this wada to another: nothing intense, just a quiet wish 
+                    that your December and the new year ahead feels a little more peaceful and a little more you.
                 </p>
 
                 <div class="divider"></div>
@@ -263,14 +263,15 @@
                     <p>Hey Ava,</p>
 
                     <p>
-                        Since this whole thing is a bit of a random-gift situation, I only know a few
-                        things about you: that you’re from New Zealand, that swimming and the ocean
+                        Since we don't really know each other yet, I could only get
+                        to know a few things about you from the intro post and your friends:
+                        that you’re from New Zealand, that swimming and the ocean
                         are very much your environment, and that music is one of your favourite ways 
                         to exist in the world.
                     </p>
 
                     <p>
-                        That already sounds like such a solid combination: water to reset your mind,
+                        That already sounds like you're such a cool person: water to reset your mind,
                         music to soundtrack whatever season you’re in, and a home country that’s
                         basically a postcard any time you look at a coastline.
                     </p>
@@ -279,23 +280,23 @@
                         So, for Christmas, I just wanted to wish you days that feel like early-morning
                         swims: clear, calm, and a little bit magic. May your playlists stay elite,
                         your schedule give you at least a few slow mornings, and your year ahead be 
-                        more about steady progress than chaotic stress.
+                        more about steady progress than chaotic stress which is exactly what IB wants.
                     </p>
 
                     <p class="ultra-soft">
                         If you’re ever missing home, I hope you somehow find little New Zealand-style
-                        moments here – a sky that reminds you of somewhere else, the sound of water,
+                        moments here. Maybe a sky that reminds you of somewhere else, the sound of water,
                         or a song that instantly puts you back on a beach in your head.
                     </p>
 
                     <p>
-                        Wherever you end up swimming next – pools, open water, or just in your thoughts –
+                        Wherever you end up swimming next – pool, Mulshi river, or just in your thoughts,
                         I hope it all feels safe, grounding, and very “you”.
                     </p>
 
                     <p class="closing">
                         Merry Christmas, Happy New Year in advance, and I genuinely hope 2026 is gentle,
-                        kind, and full of small, quiet wins for you. 🎄🌊🎧
+                        kind, and full of small, quiet wins for you. I hope to get to know you better!🎄🌊🎧
                     </p>
                 </div>
 
@@ -314,7 +315,7 @@
                 </div>
 
                 <div class="tiny-note">
-                    (P.S. No need to reply or do anything – this really is just a one-way wish on a webpage.)
+                    (P.S. No need to reply or do anything. This is just a one-way webpage:)
                 </div>
             </div>
         </div>
@@ -360,4 +361,5 @@
     </script>
 </body>
 </html>
+
 
