--- a/thanks.html
+++ b/thanks.html
@@ -199,7 +199,7 @@
                 </h1>
 
                 <p class="text">
-                    Thanks for travelling through this little Christmas website experiment.  
+                    Thanks for travelling through this little Christmas website I made.  
                     May your next year be full of swims that reset your brain, playlists that never miss,
                     and pockets of time that actually feel like they belong to you.
                 </p>
@@ -271,4 +271,5 @@
     </script>
 </body>
 </html>
+
 
